Lots of work in all areas, still working out how to broadcast from in the callbacks.

--- a/tests/node-server/views/index.ejs
+++ b/tests/node-server/views/index.ejs
@@ -1,3 +1,6 @@
 <div id="connected" class="red" style="float:left">Connected?</div>
 <br>
 <input id="msg" type="text" name="msg"/><button id="send-msg">Send</button>
+<br>
+<div id="clients">
+</div>
