--- a/tests/node-server/views/layout.ejs
+++ b/tests/node-server/views/layout.ejs
@@ -8,8 +8,7 @@
 	<!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><![endif]-->
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link rel="stylesheet" href="/css/default.css" type="text/css">
-
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
+        <script src="/js/jquery.min.js" type="text/javascript"></script>
         <script src="/js/web_sockets.js" type="text/javascript"></script>
         <script src="/js/commotion-ws.js" type="text/javascript"></script>
         <script src="/js/main.js" type="text/javascript"></script>
