--- a/tests/node-server/public/css/default.css
+++ b/tests/node-server/public/css/default.css
@@ -30,16 +30,8 @@ html, body{
 .green {background-color: green;}
 .red{background-color: red;}
 
-.chat-container{
-    float: left;
-}
-#clients {
-    margin-left: 20px;
-    float:left;
-}
-#clients ul {
-    
-}
+.chat-container{ float: left; }
+#clients { margin-left: 20px; float:left; }
 #clients li{
     padding: 5px;
     margin-bottom: 10px;
@@ -60,6 +52,5 @@ html, body{
     height: 350px;
     margin-bottom: 20px;
 }
-
 .norm{color:black;}
 .error{color:red;}
